I added a game info

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
       <button class="btn btn--hold">📥 Hold</button>
     </main>
     <p class="warn">Can only play on desktop Mode!</p>
+   
+   
+      <button class="show-modal">About Game</button>
+
+      <div class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <h1>Rules of the Pig game</h1>
+        <ul class="rules">
+          <li class="rule">The <span class="pink"> 🎲 ROLL DICE </span> button is used to produced a dice number, which will be added to the  <span class="pink">CURRENT</span> number</li>
+          <li class="rule">The <span class="pink"> 📥 HOLD DICE </span> button is used to record the current score to the SCOREBOARD at the top of each player's card</li>
+          <li class="rule">The <span class="pink"> <b></b>🔄 NEW GAME</span> button is used to reset the game</li>
+          <li class="rule">If the active player rolls a dice that has a face of "1" viz <img src="dice-1.png" width="30px" style="box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.9);"> then the game switches to another player</li>
+          <li class="rule">Game is best played and enjoyed by 2 players</li>
+        <li class="rule">The target score is 100 points</li>
+        <li class="rule">First player to get to a hundred point or more wins!!</li>
+        <li class="rule">Game is best played and enjoyed by 2 players e.g friends, couples and so on..</li>
+        </ul>
+        <p class="developer">Developed by <a href="https://www.github.com/muizaddy">Muiz Adebayo</a></p>
+      </div>
+      <div class="overlay hidden"></div>
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
