Added these files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <body>
 
+   <div class="main_body">
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
@@ -33,10 +34,12 @@
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
+    <button class="show-modal" style="font-size: large;">About Game</button>
+   </div>
     <p class="warn">Can only play on desktop Mode!</p>
    
    
-      <button class="show-modal">About Game</button>
+     
 
       <div class="modal hidden">
         <button class="close-modal">&times;</button>
@@ -51,7 +54,7 @@
         <li class="rule">First player to get to a hundred point or more wins!!</li>
         <li class="rule">Game is best played and enjoyed by 2 players e.g friends, couples and so on..</li>
         </ul>
-        <p class="developer">Developed by <a href="https://www.github.com/muizaddy">Muiz Adebayo</a></p>
+        <p class="developer">Developed by <a href="https://www.github.com/muizaddy"> &nbsp;Muiz Adebayo</a></p>
       </div>
       <div class="overlay hidden"></div>
     </p>
